// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserData should render empty component 1`] = `
<div
  className="user-data"
>
  <div
    className="user-info"
  />
</div>
`;

exports[`UserData should render prop data 1`] = `
<div
  className="user-data"
>
  <div
    className="photo"
  >
    Test Photo
  </div>
  <div
    className="user-info"
  >
    <div
      className="name"
    >
      Test, Person
    </div>
    <div
      className="detail"
    >
      Detail For Test
    </div>
  </div>
</div>
`;
